# catan-rl

./: README.md  environment.yml  mappo_example.py  pyproject.toml  register_env.sh  requirements-marllib.txt  requirements.txt  rps_a2c_ppo.py
notebooks/: graphs.ipynb
settlers_of_catan_RL_forked/: play.py
settlers_of_catan_RL_forked/RL/: distributions.py  utils.py
settlers_of_catan_RL_forked/RL/forward_search_policy/: sample_actions_fn.py  worker.py
settlers_of_catan_RL_forked/RL/models/: build_agent_model.py  multi_headed_attention.py  observation_module.py  utils.py
settlers_of_catan_RL_forked/RL/ppo/: arguments.py  ppo.py
settlers_of_catan_RL_forked/env/: wrapper.py
settlers_of_catan_RL_forked/evaluation/: evaluation_manager.py  run_evaluations.py  run_forward_search_evaluation.py  vec_evaluation.py
settlers_of_catan_RL_forked/game/: enums.py  utils.py
settlers_of_catan_RL_forked/game/components/: player.py  tile.py
settlers_of_catan_RL_forked/ui/: display.py
settlers_of_catan_RL_forked/ui/sftext/: sftext.py
src/: catan.py  catan.yaml  ew.txt  sb3_experiment.py
src/catan_agent/: distributions.py
src/catan_agent/forward_search_policy/: policy.py  sample_actions_fn.py  utils.py  worker.py
src/catan_env/: catan_env.py  catan_env311.py  catan_env39.py  catan_env_backup.py  wrapper.py
src/catan_rl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/config/: catanEnv.yaml
src/train/: example_sb3.py  test_train_marllib.py  train_sb3.py
tests/: test_catan_agent.py  test_catan_env.py  test_render.py  testing.py
tmp/: bbp.py  rps.py
(+52 files in other folders)
