[project]
name = "catan-rl"
version = "0.1.0"
description = "Multi Agent Deep Reinforcement Learning for a simplified Settlers of Catan"
authors = [
    { name = "Anirud Aggarwal", email = "anirud@umd.edu" },
    { name = "Jinhai Yan", email = "jyan1236@umd.edu"},
    { name = "Han Lin", email = "hlin1238@umd.edu"},
    { name = "Serena Huang", email = "shuang04@umd.edu"},
    { name = "Rohit Kommuru", email = "rkommuru@umd.edu"},
    { name = "Monish Napa", email = "mnapa@umd.edu"},
]
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # Whitespace before ':'
    "W503",  # Line break before binary operator
]

[tool.mypy]
strict = true
ignore_missing_imports = true

